Additional bootstrap styling

--- a/test/fixtures/cheques.yml
+++ b/test/fixtures/cheques.yml
@@ -4,10 +4,10 @@ one:
   date: 2015-09-12
   amount: 9.99
   amount_text: MyString
-  recipient_id: 
+  recipient_id: 298486374
 
 two:
   date: 2015-09-12
   amount: 9.99
   amount_text: MyString
-  recipient_id: 
+  recipient_id: 298486374
