--- a/test/fixtures/recipients.yml
+++ b/test/fixtures/recipients.yml
@@ -2,8 +2,8 @@
 
 one:
   recipient_name: MyString
-  customer_id: 
+  customer_id: 298486374
 
 two:
   recipient_name: MyString
-  customer_id: 
+  customer_id: 298486374
